--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
   "require": {
-    "phpspec/phpspec": "^3.2"
   },
   "autoload": {
     "psr-0": {
@@ -8,6 +7,8 @@
     }
   },
   "require-dev": {
-    "behat/behat": "^3.3"
+    "behat/behat": "^3.3",
+    "phpunit/phpunit": "^5.7",
+    "phpspec/phpspec": "^3.2"
   }
 }
